--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:viewBindingIgnore="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
     <EditText
         android:id="@+id/edtUniqueId"
         android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="16dp"
-        android:textSize="20sp"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:paddingHorizontal="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_border"
-        android:layout_height="50dp"/>
-        <LinearLayout
+        android:paddingHorizontal="8dp"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:textAlignment="center">
+
+        <Button
+            android:id="@+id/button_bluetooth_browse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            android:orientation="horizontal">
+            android:layout_marginRight="5dp"
+            android:text="Default printer" />
 
-            <Button
-                android:id="@+id/button_bluetooth_browse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="Default printer"/>
-
-            <Button
-                android:id="@+id/connect_to_server"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Start" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/connect_to_server"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start" />
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
-            android:clipToPadding="false"/>
-        <Button
+            android:clipToPadding="false"
+            android:padding="16dp" />
+
+        <ImageButton
             android:id="@+id/btn_scroll_down"
-            android:layout_width="50dp"
-            android:visibility="invisible"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="bottom|center"
-            android:layout_height="50dp"/>
+            android:background="@drawable/button_arrow_down"
+            android:clickable="true"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/arrow_downward_24"
+            android:focusable="true"/>
     </FrameLayout>
 
 </LinearLayout>
